[Chore] Title 추가

--- a/api/templates/api/chat_demo.html
+++ b/api/templates/api/chat_demo.html
@@ -115,6 +115,7 @@ ul.list li:hover .delete-btn{display:block}
 <!-- ─────── MAIN ─────── -->
 <div id="main">
   <div id="top">
+    <div><a style="font-size: 18px; font-weight: bold; padding-left: 4px; padding-right: 8px;">Graduate Project - POS Analyzer</a></div>
     <input id="user-id" placeholder="User ID" value="" type="text">
     <input id="password" placeholder="Password" type="password" value="">
     <button id="login-btn" class="top-login">로그인</button>
